모노레포로 파일트리 개편
* refactor: 프론트엔드앱 디렉토리 변경

Signed-off-by: Bell <bell04204@gmail.com>

* refactor: 백엔드앱 디렉토리 변경

Signed-off-by: Bell <bell04204@gmail.com>

* refactor: k8s 배포 디렉토리 이전2

Signed-off-by: Bell <bell04204@gmail.com>

* refactor: k8s 배포 관련 코드 디렉토리 이전

Signed-off-by: Bell <bell04204@gmail.com>

* refactor: 백엔드앱 디렉토리 이전

Signed-off-by: Bell <bell04204@gmail.com>

* refactor: 프론트앱 디렉토리 이전2

Signed-off-by: Bell <bell04204@gmail.com>

* refactor: 프론트앱 디렉토리 이전

Signed-off-by: Bell <bell04204@gmail.com>